--- a/my-app/src/css/style.css
+++ b/my-app/src/css/style.css
@@ -788,19 +788,19 @@ footer h1{
   margin-right: -2px;
 }
 .tab-style1 li:nth-child(1).active~li:nth-child(2):not(.active){
-  margin-left: 0px;
+  margin-left: -16px;
 }
 .tab-style1 li:nth-child(1):not(.active)~li:nth-child(2):not(.active){
   margin-right: -15px;
 }
-.tab-style1 li:nth-child(2):not(.active)~li:nth-child(3).active~{
-  margin-left: -18px;
+.tab-style1 li:nth-child(2):not(.active)~li:nth-child(3).active{
+  margin-left: 12px;
 }
 .tab-style1 li:nth-child(3).active{
   margin-right: -8px;
 }
 .tab-style1 li:nth-child(2).active{
-  margin-left: 20px;
+  margin-left: 0px;
 }
 .tab-style1 li:nth-child(1):not(.active){
   margin-left: 10px;
@@ -866,6 +866,21 @@ footer h1{
 .tab-style1 li:nth-child(3).active ~ .follow {
   left: 140px;
 }
+.homepagephoto{
+  width: 100px;
+  height: 100px;
+  border-radius: 50%;
+}
+
+@media (max-width: 768px) {
+  #label option{
+    font-size: 10px; /* Adjust the font size as per your requirement */
+  }
+  #preferences option{
+    font-size: 10px; /* Adjust the font size as per your requirement */
+  }
+}
+
 .tab-style1 .active {
   z-index: 100;
   width: 80px;
@@ -1158,5 +1173,3 @@ input.editnow{
 .theconversation{
   padding-bottom: 100px;
 }
-
-
